# swarm

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/swarm-cli/: Cargo.toml
crates/swarm-cli/src/: cli.rs  cli_commands.rs  cli_read_commands.rs  doctor.rs  lib.rs  package_repo.rs  provider_commands.rs  routing_repo.rs  scaffold.rs  service.rs  skills_commands.rs
crates/swarm-cli/tests/: repo_contract.rs
crates/swarm-contracts/: Cargo.toml
crates/swarm-contracts/src/: events.rs  ids.rs  jobs.rs  lib.rs  mcp.rs  package.rs  telemetry.rs
crates/swarm-core/: Cargo.toml
crates/swarm-core/src/: cursor.rs  error.rs  event_repo.rs  job_repo.rs  ledger_repo.rs  lib.rs  liveness.rs  session_repo.rs  telemetry_repo.rs
crates/swarm-exec/: Cargo.toml
crates/swarm-exec/src/: backend_registry.rs  background_runtime.rs  cli_backend.rs  executor.rs  lib.rs  monitor_runtime.rs  native_backend.rs  openai_backend.rs  orchestration.rs  preflight.rs  session.rs  synthesis.rs
crates/swarm-kernel/: Cargo.toml
crates/swarm-kernel/src/: agent.rs  args.rs  backend_abi.rs  backend_descriptor.rs  conductor.rs  config.rs  context.rs  events.rs  format.rs  ids.rs  job_types.rs  lib.rs  process.rs  profiles.rs  prompts.rs  resolver.rs  routing.rs  task_classifier.rs  telemetry.rs
crates/swarm-manager/: Cargo.toml  README.md
crates/swarm-manager/examples/: simple_agent.rs
crates/swarm-manager/src/: lib.rs
crates/swarm-manager/src/agent/: mod.rs
crates/swarm-manager/src/preset/: mod.rs
crates/swarm-manager/src/provider/: anthropic.rs  crypto.rs  gemini.rs  lmstudio.rs  mock.rs  mod.rs  ollama.rs  openai.rs  registry.rs  types.rs
crates/swarm-manager/src/skills/: mod.rs
crates/swarm-manager/src/tools/: exec.rs  file.rs  mod.rs  output.rs  registry.rs  web.rs
crates/swarm-mcp/: Cargo.toml  mcp-tools.json
crates/swarm-mcp/src/: lib.rs  manifest.rs  mcp_dispatch.rs  mcp_helpers.rs  mcp_schema.rs  overview.rs  registry_hook.rs  report.rs  rmcp_server.rs
crates/swarm-mcp/tests/fixtures/session-store/session-fixture-completed/: api-docs.md  digest.md  events.jsonl  layer-reports.jsonl  session.json  summary.md  transcript.md
crates/swarm-mcp/tests/fixtures/session-store/session-fixture-completed/layer-reports/: qa.md
crates/swarm-registrar/: Cargo.toml
crates/swarm-registrar/src/: lib.rs
crates/swarm-store/: Cargo.toml
crates/swarm-store/src/: job.rs  ledger_helpers.rs  lib.rs  monitor_store.rs  process_helpers.rs  store.rs  telemetry_helpers.rs
crates/swarm-store/src/repos/: event_repo.rs  job_repo.rs  ledger_repo.rs  mod.rs  session_repo.rs  telemetry_repo.rs
docs/: authoring-a-backend.md
examples/: config.example.toml
site/: index.html  script.js  styles.css
skills/using-swarm/: SKILL.md
