[package]
name = "swarm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI layer for the swarm engine: command dispatch, run/run_dispatch, package and routing repos"

[dependencies]
swarm-contracts = { path = "../swarm-contracts" }
swarm-core   = { path = "../swarm-core" }
swarm-store  = { path = "../swarm-store" }
swarm-kernel = { path = "../swarm-kernel" }
swarm-exec   = { path = "../swarm-exec" }
swarm-mcp    = { path = "../swarm-mcp" }
# Default features only: the provider registry + vault, with no async
# runtime or HTTP client (those live behind swarm-manager's opt-in features).
swarm-manager = { path = "../swarm-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
