[package]
name = "swarm-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Canonical wire-contract types for the swarm runtime (serde-only, compiles standalone)"

[lib]
name = "swarm_contracts"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
