[package]
name = "swarm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure repo-trait substrate for the swarm runtime (no external-system deps)"

[dependencies]
swarm-contracts = { path = "../swarm-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
