[package]
name = "swarm-manager"
version.workspace = true
edition.workspace = true
description = "Single-agent manager core for the swarm orchestrator: provider registry, credential vault, and the provider trait. Standalone, mesh-free, no external CLI."
license.workspace = true

# Standalone public crate: depends ONLY on the external deps below.
# Deliberately does NOT depend on any sibling workspace crate.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Async runtime + HTTP-backed implementations — gated behind cargo features so
# the default build pulls no async-runtime / HTTP / TLS deps. rustls = pure-Rust
# TLS (no OpenSSL / native-tls), keeping with the "compiled on host, no C TLS" line.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt", "macros", "process", "fs", "time"], optional = true }
regex = { version = "1", optional = true }

[features]
# Off by default. `runtime` enables the async-runtime-backed built-in tools
# (exec / file / output) plus their tokio + regex deps. `http` builds on
# `runtime` and adds the concrete HTTP provider implementations and the web
# tool, pulling the HTTP client. Keeping them split lets the default build stay
# runtime-free (data types + trait only).
runtime = ["dep:tokio", "dep:regex"]
http = ["runtime", "dep:reqwest"]

# OS keychain — per-platform native backend so the crate builds cross-platform.
# Runtime absence is handled gracefully by the env-var fallback in crypto.rs.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"

# The runnable example builds a real HTTP-backed provider, so it requires the
# `http` feature. Gated here (not via `#[cfg]`) so the default `cargo build`
# skips it cleanly.
[[example]]
name = "simple_agent"
required-features = ["http"]
